--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.0.1",
+    "chart.js": "^4.3.0",
     "eslint": "^8.36.0",
     "eslint-scope": "^7.1.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
