--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.124",
     "@mui/material": "^5.11.14",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@paypal/react-paypal-js": "^7.8.3",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.269",
     "@syncfusion/ej2-react-calendars": "^21.1.41",
@@ -34,6 +35,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
