--- a/demo10/pom.xml
+++ b/demo10/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>spring-boot-starter-web-services</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
