--- a/demo10/src/main/resources/application.properties
+++ b/demo10/src/main/resources/application.properties
@@ -6,6 +6,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 file.upload-dir=src/main/resources/static/images/img/
 
+spring.security.oauth2.client.registration.google.client-id=443269779311-pjtqll0rrdb4tse41u4jifduk40achkd.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
+spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+
 
 
 
